# Employer-Management-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
Postman test import/: EmployerManagementAPI.postman_collection.json
authentication/: admin.py  models.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py
employer_management/: settings.py  urls.py
employer_management/templates/: base.html  dashboard.html  index.html  login.html  signup.html
employers/: admin.py  models.py  serializers.py  urls.py  views.py
employers/migrations/: 0001_initial.py
